--- a/index.html
+++ b/index.html
@@ -5,10 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto - Bom Dia</title>
 </head>
+<style>
+    .bloco{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #dae721;
+    border-radius: 10px;
+    text-align: center;
+    }
+</style>
 <body>
+    <div class="bloco">
     <h1>Projeto - Bom dia</h1>
     <h2><span id="resultado"></span></h2>
-
+    <p id="saudacao"></p>
     <script src="main.js"></script>
+    </div>
 </body>
 </html>
