--- a/index.html
+++ b/index.html
@@ -4,21 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto - Bom Dia</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
 </head>
-<style>
-    .bloco{
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #dae721;
-    border-radius: 10px;
-    text-align: center;
-    }
-</style>
 <body>
+    <div class="mainblock">
+        <h1>Projeto Saudação</h1>
+    </div>
     <div class="bloco">
-    <h1>Projeto - Bom dia</h1>
+    <!-- <h1>Projeto - Bom dia</h1> -->
     <h2><span id="resultado"></span></h2>
     <p id="saudacao"></p>
     <script src="main.js"></script>
